feat: added mobile

--- a/iGeniusStep4.html
+++ b/iGeniusStep4.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+       <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>iGenius Enrollment - My Information</title>
     <link rel="stylesheet" href="css/iGeniusStep4.css" type="text/css" />
     <link rel="icon" href="Image/Dark-G.png" />
@@ -191,7 +193,7 @@
               </div>
       </section>
       <section class="form-sec">
-         <p style="margin-left: -141px;">Your Enroller: Christian Crabtree</p>
+         <p class='enroller'>Your Enroller: Christian Crabtree</p>
       </section>
 
         <div style="display: grid; justify-content: center; margin-top: 29px">
