--- a/iGeniusStep3.html
+++ b/iGeniusStep3.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iGenius Enrollment - My Information</title>
     <link rel="stylesheet" href="css/iGeniusStep3.css" type="text/css" />
+    
     <link rel="icon" href="Image/Dark-G.png" />
   </head>
 
