I increased the font in the moblie view for the nav

--- a/iGeniusStep4.html
+++ b/iGeniusStep4.html
@@ -103,7 +103,8 @@
 
                 <div class="grid">
                 <p>*State</p>
-                <select name="state" id="state" class="rowinput" size="1">
+                <input type="text" required></div>
+              <<!---  <select name="state" id="state" class="rowinput" size="1">
 <option value="">Choose</option>
 <option value="Abuja">Abuja</option>
 <option value="Anambra">Anambra</option>
@@ -142,7 +143,7 @@
 <option value="Taraba">Taraba</option>
 <option value="Yobe">Yobe</option>
 <option value="Zamfara">Zamfara</option>
-</select>
+</select> -->
                 </div>
       </section>
 
