--- a/index.html
+++ b/index.html
@@ -15,29 +15,44 @@
 
     <nav class="topbar">
       <div class="topbar-media">
-         <ul>
+         <ul class="main-list">
+          <div class="main-list">
         <span class="numberSteps Itemactive">1</span>
         <li><a href="#"> Country & Language</a></li>
+          </div>
         <li>
           <a href="#"><hr /></a>
         </li>
+          <div class="main-list">
+
         <span class="numberSteps Itemactivetwo">2</span>
         <li><a href="#"> Choose Membership </a></li>
+        </div>
         <li>
           <a href="#"><hr /></a>
         </li>
+          <div class="main-list">
+
         <span class="numberSteps Itemactivethree">3</span>
         <li><a href="#"> Prepayment</a></li>
+        </div>
+
         <li>
           <a href="#"><hr /></a>
         </li>
+          <div class="main-list">
+
         <span class="numberSteps Itemactivethree">4</span>
         <li><a href="#"> Personal Info</a></li>
+        </div>
         <li>
           <a href="#"><hr /></a>
         </li>
+          <div class="main-list">
+
         <span class="numberSteps Itemactivethree">5</span>
         <li><a href="#" class="active"> Payment & Confirmation</a></li>
+        </div>
       </ul>
     </nav>
       </div>
@@ -78,7 +93,9 @@
           <input type="radio" checked />
           <label>SELECT</label>
           <p class="slide-cont-price">
+            <b>
             $299.99 (Fast Start: $50 / Volume: 150)
+            </b>
           </p>
           <p class="slide-cont-text">
             Includes: FOREXthrive, CRYPTOcore, Commodities Alerts, SequaliZer,
@@ -94,7 +111,9 @@
           <input type="radio" checked/>
           <label>PREMIUM</label>
           <p class="slide-cont-price">
+            <b>
             $599.99 (Fast Start: $100 / Volume: 300)
+            </b>
           </p>
           <p class="slide-cont-text">
             Includes: FOREXthrive, CRYPTOcore, Commodities Alerts, SequaliZer,
@@ -110,7 +129,9 @@
           <input type="radio" checked/>
           <label>ELITE</label>
           <p class="slide-cont-price">
+            <b>
             $1,499.99 (Fast Start: $200 / Volume: 1,000)
+            </b>
           </p>
           <p class="slide-cont-text">
             Includes: FOREXthrive, CRYPTOcore, Commodities Alerts, SequaliZer,
@@ -126,7 +147,7 @@
         <div class="slide-cont">
           <input type="radio" checked />
           <label>CHOICE</label>
-          <p class="slide-cont-price">$99.99 (Fast Start: $25 / Volume: 50)</p>
+          <p class="slide-cont-price"><b>$99.99 (Fast Start: $25 / Volume: 50)</b></p>
           <p class="slide-cont-text">
             Includes: FOREXthrive, Commodities Alerts, MONEYpro, University,
             MARKETpro, learnLIVE, and ndau access. $99.99 (one-time). $99.99
@@ -135,83 +156,96 @@
         </div>
       </div>
 
-      <div id="Smartfinance" class="tabcontent">
-        <div class="slide-cont">
-          <input type="radio" />
-          <label>smartFINANCE + Choice Forex</label>
-          <p class="slide-cont-price">
-            $149.99 (Fast Start: $35 / Volume: 65) SKU:881
-          </p>
-          <p class="slide-cont-text">
-            Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
-            FOREXthrive, Commodities Alerts, MONEYpro, University, MARKETpro,
-            learnLIVE, and ndau access. $149.99 (one-time). $149.99 (monthly).
-            Subscription automatically renews monthly.
-          </p>
+     <div id="Smartfinance" class="tabcontent">
+  <div class="slide-cont">
+    <input type="radio" id="choice1" name="financeChoice" />
+    <label for="choice1">smartFINANCE + Choice Forex</label>
+    <p class="slide-cont-price">
+      <b>
+        $149.99 (Fast Start: $35 / Volume: 65) SKU: 881
+      </b>
+    </p>
+    <p class="slide-cont-text">
+      Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
+      FOREXthrive, Commodities Alerts, MONEYpro, University, MARKETpro,
+      learnLIVE, and ndau access. $149.99 (one-time). $149.99 (monthly).
+      Subscription automatically renews monthly.
+    </p>
 
-          <input type="radio" />
-          <label>smartFINANCE + Choice Equity</label>
-          <p class="slide-cont-price">
-            $149.99 (Fast Start: $35 / Volume: 65) SKU: 882
-          </p>
-          <p class="slide-cont-text">
-            Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
-            EQUITYprime, MONEYpro, University, MARKETpro, learnLIVE, and ndau
-            access. $149.99 (one-time). $149.99 (monthly). Subscription
-            automatically renews monthly.
-          </p>
+    <input type="radio" id="choice2" name="financeChoice" />
+    <label for="choice2">smartFINANCE + Choice Equity</label>
+    <p class="slide-cont-price">
+      <b>
+        $149.99 (Fast Start: $35 / Volume: 65) SKU: 882
+      </b>
+    </p>
+    <p class="slide-cont-text">
+      Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
+      EQUITYprime, MONEYpro, University, MARKETpro, learnLIVE, and ndau
+      access. $149.99 (one-time). $149.99 (monthly). Subscription
+      automatically renews monthly.
+    </p>
 
-          <input type="radio" checked/>
-          <label>smartFINANCE </label>
-          <p class="slide-cont-price">
-            $1,549.99 (Fast Start: $215 / Volume: 1,015) SKU: 885
-          </p>
-          <p class="slide-cont-text">
-            includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
-            FOREXthrive, CRYPTOcore, EQUITYprime, Commodities Alerts,
-            SequaliZer, MONEYpro, University, learnLIVE, MARKETpro, TRAVELpro,
-            SK LiveShare, Elite Advantage, ndau access, COINpro, and CRYPTOelite
-            (10% Entry Fee / 20% Profit Share). $1,549.99 (one-time). $224.99
-            (monthly). Subscription automatically renews monthly.
-          </p>
+    <input type="radio" id="choice3" name="financeChoice" checked />
+    <label for="choice3">smartFINANCE</label>
+    <p class="slide-cont-price">
+      <b>
+        $1,549.99 (Fast Start: $215 / Volume: 1,015) SKU: 885
+      </b>
+    </p>
+    <p class="slide-cont-text">
+      includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
+      FOREXthrive, CRYPTOcore, EQUITYprime, Commodities Alerts,
+      SequaliZer, MONEYpro, University, learnLIVE, MARKETpro, TRAVELpro,
+      SK LiveShare, Elite Advantage, ndau access, COINpro, and CRYPTOelite
+      (10% Entry Fee / 20% Profit Share). $1,549.99 (one-time). $224.99
+      (monthly). Subscription automatically renews monthly.
+    </p>
 
-          <input type="radio" />
-          <label>smartFINANCE </label>
-          <p class="slide-cont-price">
-            $59.99 (Fast Start: $15 / Volume:15) SKU: 887
-          </p>
-          <p class="slide-cont-text">
-            Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, and TAXpro. $59.99
-            (one-time). $59.99 (monthly). Subscription automatically renews
-            monthly
-          </p>
+    <input type="radio" id="choice4" name="financeChoice" />
+    <label for="choice4">smartFINANCE</label>
+    <p class="slide-cont-price">
+      <b>
+        $59.99 (Fast Start: $15 / Volume: 15) SKU: 887
+      </b>
+    </p>
+    <p class="slide-cont-text">
+      Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, and TAXpro. $59.99
+      (one-time). $59.99 (monthly). Subscription automatically renews
+      monthly.
+    </p>
 
-          <input type="radio" />
-          <label>smartFINANCE Premium </label>
-          <p class="slide-cont-price">
-            $649.99 (Fast Start: $100 / Volume:315) SKU: 888
-          </p>
-          <p class="slide-cont-text">
-            Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
-            FOREXthrive, CRYPTOcore, EQUITYprime, Commodities Alerts,
-            SequaliZer, MONEYpro, University, learnLIVE, MARKETpro, TRAVELpro,
-            SK LiveShare $649.99 (one-time). $224.99 (monthly). Subscription
-            automatically renews monthly.
-          </p>
+    <input type="radio" id="choice5" name="financeChoice" />
+    <label for="choice5">smartFINANCE Premium</label>
+    <p class="slide-cont-price">
+      <b>
+        $649.99 (Fast Start: $100 / Volume: 315) SKU: 888
+      </b>
+    </p>
+    <p class="slide-cont-text">
+      Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
+      FOREXthrive, CRYPTOcore, EQUITYprime, Commodities Alerts,
+      SequaliZer, MONEYpro, University, learnLIVE, MARKETpro, TRAVELpro,
+      SK LiveShare $649.99 (one-time). $224.99 (monthly). Subscription
+      automatically renews monthly.
+    </p>
 
-          <input type="radio"  />
-          <label>smartFINANCE + Choice Crypto </label>
-          <p class="slide-cont-price">
-            $149.99 (Fast Start: $35 / Volume:65) SKU: 889
-          </p>
-          <p class="slide-cont-text">
-            Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
-            CRYPTOcore, MONEYpro, University, MARKETpro, learnLIVE, and ndau
-            access. $149.99 (one-time). $149.99 (monthly). Subscription
-            automatically renews monthly.
-          </p>
-        </div>
-      </div>
+    <input type="radio" id="choice6" name="financeChoice" />
+    <label for="choice6">smartFINANCE + Choice Crypto</label>
+    <p class="slide-cont-price">
+      <b>
+        $149.99 (Fast Start: $35 / Volume: 65) SKU: 889
+      </b>
+    </p>
+    <p class="slide-cont-text">
+      Includes: DEBTpro, SAVEpro, HEALTHpro, CREDITpro, TAXpro,
+      CRYPTOcore, MONEYpro, University, MARKETpro, learnLIVE, and ndau
+      access. $149.99 (one-time). $149.99 (monthly). Subscription
+      automatically renews monthly.
+    </p>
+  </div>
+</div>
+
     </div>
 
     <!---------------Continue Button-------------->
@@ -222,7 +256,7 @@
     </div>
 
     <footer class="footer">
-      <div>
+      <div class='center'>
         <p>&copy2023 iGenius.All Rights Reserved.</p>
       </div>
     </footer>
